# sm64

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  Makefile  actors_jp.cmake  assets_jp.cmake  assets_us.cmake  cake_pngs_jp.cmake  cake_pngs_us.cmake  compile_commands.json  convert_cakes.cmake  convert_demo_data.cmake  convert_mario_animations.cmake  convert_sequences.cmake  convert_skyboxes.cmake  convert_sounds.cmake  create_compile_database.sh  encode_sounds.cmake  endian_and_bitwidth.cmake  extract_assets.cmake  generate_level_headers.cmake  generate_text_strings.cmake  goddard.cmake  level_pngs_jp.cmake  level_pngs_us.cmake  libgcc.cmake  libultra.cmake  preprocess_charmap.cmake  preprocess_charmap_debug.cmake  preprocess_level_rules.cmake  preprocess_sm64.ld.cmake  skybox_pngs_jp.cmake  skybox_pngs_us.cmake  sound_aiffs_jp.cmake  sound_aiffs_us.cmake  texture_pngs_jp.cmake  texture_pngs_us.cmake  use-mips-linux-gcc.cmake  use-mips-linux-gnu-gcc.cmake  use-mips32-elf-gcc.cmake  (+3 more)
actors/: pngs_jp.cmake  pngs_us.cmake
actors/bobomb/: model.inc.c
actors/bubba/: model.inc.c
actors/chair/: model.inc.c
actors/haunted_cage/: model.inc.c
actors/heave_ho/: model.inc.c
actors/king_bobomb/: model.inc.c
actors/koopa_flag/: model.inc.c
actors/lakitu_cameraman/: model.inc.c
actors/lakitu_enemy/: model.inc.c
actors/mario/: model.inc.c
actors/wiggler_head/: model.inc.c
data/: behavior_data.c
include/: behavior_data.h
levels/bitfs/areas/1/3/: model.inc.c
levels/bob/: script.c
levels/lll/: texture.inc.c
levels/ssl/: texture.inc.c
lib/src/: contramread.c  contramwrite.c  osContInit.c  osContStartReadData.c  osEepromRead.c  osEepromWrite.c  osPfsIsPlug.c
src/audio/: effects.c  heap.c  load.c  seqplayer.c  synthesis.c
src/engine/: surface_load.c
src/game/: behavior_actions.c  behavior_actions.h  camera.c  envfx_bubbles.c  game_init.c  ingame_menu.c  level_update.c  mario_actions_airborne.c  mario_actions_automatic.c  mario_actions_cutscene.c  mario_actions_moving.c  mario_actions_object.c  moving_texture.c  object_helpers.c  paintings.c  shadow.c
src/game/behaviors/: boo.inc.c  bowling_ball.inc.c  fish.inc.c  mushroom_nup.inc.c  spawn_star.inc.c  unagi.inc.c
src/goddard/: dynlist_proc.c  joints.c
src/menu/: file_select.c  star_select.c
tools/: .gitignore  CMakeLists.txt  Makefile  armips.cpp  capture_output.py  compare_binary_files.py  compare_directories.py  compare_text_files.py  extract_lines.py  generate_level_header.cpp
tools/ido-static-recomp/tools/rabbitizer/cplusplus/include/instructions/: InstrId.hpp  InstructionBase.hpp  InstructionCpu.hpp  InstructionR5900.hpp  InstructionRsp.hpp  OperandType.hpp  Registers.hpp
tools/sm64tools/: CMakeLists.txt
